# lexia-cr

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apps-script/: Code.gs  Código.js
data/: slack_alpha_rpa_thread_index.json
docs/: agradecimentos-lexia.html  report-lexia-cr-abril-2026.md
notebooks/: lexia_casos_pendentes.sql  smoke_test_mtls_databricks.py
scripts/: auto_reprocess_failed.sh  compare_shadow.py  generate_examples.py  run_dry_run.sh  run_scheduled.sh  run_traced_pipeline.py  update_oficio_links.py
src/lexia/: __init__.py  config.py  main.py  monitoring.py  orchestrator.py  preflight.py
src/lexia/apis/: auth.py  crebito.py  customers.py  petrificus.py  rayquaza.py  waze.py
src/lexia/databricks/: query.py
src/lexia/deterministic/: __init__.py  classifier.py  engine.py  templates.py  value_words.py
src/lexia/docs/: generator.py
src/lexia/gemini/: prompt.py
tests/: test_monitoring.py  test_pipeline_core.py
tests/deterministic/: test_classifier.py  test_templates.py
